<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Belle</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="loading">loading</string>

    <string name="tab_index">首页</string>
    <string name="tab_mall">商城</string>
    <string name="tab_find">发现</string>
    <string name="tab_my">我的</string>

    <string name="alert_msg_quit">再按一次退出</string>

    <string name="nav_1">test1</string>
    <string name="nav_2">test2</string>
    <string name="nav_3">test3</string>
    <string name="nav_4">test4</string>
    
    <string name="NULL"></string>
    
</resources>
